add hemispheres to app

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-md-8 col-sm-12">
                     <h2>Featured Mars Image</h2>
-                    <img src={{ elems['featured_image'] }} alt="featured_image">
+                    <img class="img-fluid" src={{ elems['featured_image'] }} alt="featured_image">
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <br>
@@ -48,6 +48,30 @@
                         </thead>
                         {{ elems['facts']|safe }}
                     </table>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <h3>{{ elems['hemispheres'][0]['title'] }}</h3>
+                    <img class="img-fluid" src={{ elems['hemispheres'][0]['img_url'] }}>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <h3>{{ elems['hemispheres'][1]['title'] }}</h3>
+                    <img class="img-fluid" src={{ elems['hemispheres'][1]['img_url'] }}>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <h3>{{ elems['hemispheres'][2]['title'] }}</h3>
+                    <img class="img-fluid" src={{ elems['hemispheres'][2]['img_url'] }}>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <h3>{{ elems['hemispheres'][3]['title'] }}</h3>
+                    <img class="img-fluid" src={{ elems['hemispheres'][3]['img_url'] }}>
                 </div>
             </div>
         </div>
